# Quill

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: CompileService.cpp  CompileService.h  CompilerLocator.cpp  CompilerLocator.h  DspLibrary.cpp  DspLibrary.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
shared/: dsp_interface.h
